--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "React Employee Directory",
-    "description": "Sample App with React and Node.js",
+    "description": "Sample Application with React and Node.js",
     "repository": "https://github.com/ccoenraets/directory-react-nodejs",
     "logo": "https://node-js-sample.herokuapp.com/node.svg",
     "keywords": ["node", "express", "react", "directory"]
